test/fail/basic_syntax/return_outside_function.lily
#[
SyntaxError: 'return' used outside of a function.
    from return_outside_function.lily:6:
]#

return
